# KL

.specs/: 2026-05-11_pcfilters-static-library.md
CIFAR/: CIFAR.sln  CMakeLists.txt  FeatureQuality.docx  NormalSparsity.csv  NormalSparsity10.csv  convolution_sample_sparsity.py  csv_sparsity_analysis.py  normal_sparsity.py  randomized_filter_q_search.py  target_sparsity_randomized_filters.py  test_convolution_sample_sparsity.py  test_normal_sparsity.py  test_randomized_filter_q_search.py  test_target_sparsity_randomized_filters.py
CIFAR/.cursor/skills/spec-driven-development/: SKILL.md
CIFAR/.specs/: 2026-05-17-convolution-console-app.md  2026-05-30_convolution-sample-sparsity.md  2026-05-30_normal-sparsity.md
CIFAR/PCFilters/: CMakeLists.txt  PCFilters.cpp  PCFilters.h  PCFilters.vcxproj  PCFilters.vcxproj.filters
CIFAR/UnsupervisedFiltersMultiple/: CMakeLists.txt  UnsupervisedFiltersMultiple.cpp  UnsupervisedFiltersMultiple.h  UnsupervisedFiltersMultiple.vcxproj  UnsupervisedFiltersMultiple.vcxproj.filters  rGetOptimumSparsitySaturationLevel10.cpp
CIFAR/Workplace/: CIFAR_12x12.PCFilters.txt  CIFAR_1_2_4_scaled.toml  CIFAR_3x3.PCFilters.txt  CIFAR_6x6.PCFilters.txt  PCFilters_scale_2.txt  PCFilters_scale_4.txt
CIFAR/convolution/: CMakeLists.txt  ConvolutionConfig.cpp  ConvolutionConfig.h  ConvolutionOutputWriter.cpp  ConvolutionOutputWriter.h  ConvolutionPipeline.cpp  ConvolutionPipeline.h  ConvolutionRunner.cpp  ConvolutionRunner.h  FilterBank.cpp  FilterBank.h  RawImageLoader.cpp  RawImageLoader.h  SpikeProjector.cpp  SpikeProjector.h  VmaxEstimator.cpp  VmaxEstimator.h  convolution.cpp  convolution.vcxproj  convolution.vcxproj.filters
CIFAR/convolution/tests/: CMakeLists.txt  convolution_test.cpp  convolution_test.vcxproj  generate_testdata.py
CIFAR/convolution/tests/testdata/: minimal.toml  out_conv_spikes.csv  test_filters.txt  test_filters_zero.txt  zero_filter.toml
CIFAR/inpcifar10/: CIFAR10.inc  inpcifar10.cpp  inpcifar10.vcxproj  inpcifar10.vcxproj.filters
CIFAR/pcfilCIFAR/: CMakeLists.txt  pcfilCIFAR.cpp  pcfilCIFAR.vcxproj  pcfilCIFAR.vcxproj.filters  plot_filters_heatmaps.py  plot_filters_rgb.py
CIFAR/unsfil/: CMakeLists.txt  unsfil.vcxproj  unsfil.vcxproj.filters  unsfilc.cpp  unsfilcres.py  unsfilcres2.py
CIFAR/unsfil2/: CMakeLists.txt  unsfil2.cpp  unsfil2.vcxproj  unsfil2.vcxproj.filters
CIFAR/unsfil2app/: CMakeLists.txt  unsfil2app.cpp  unsfil2app.vcxproj  unsfil2app.vcxproj.filters
objects/: CMakeLists.txt
objects/Experiments/: 30000.nnc  30001.nnc
objects/objects_ArNI/: CMakeLists.txt  GetSpikesfromImage.cpp  LabelSpikeSource.cpp  RasterSpikeSource.cpp  objects_arni.cpp  objects_arni.h  objects_arni_int.h
objects/objint/: CMakeLists.txt  GetTextfromRaster.cpp  fromRaster.cpp  objfix.cpp  objinf.cpp  objint.cpp  objint.h  objlea.cpp  objpre.cpp
